<resources>
    <string name="app_name">アイソレ練習支援</string>
    <string name="app_select">部位選択</string>
    <string name="app_description">練習説明</string>
    <string name="use">使い方</string>
    <string name="start">アイソレーション測定開始</string>
    <string name="image">TODO</string>
    <string name="parts1">首</string>
    <string name="parts2">胸</string>
    <string name="parts3">腰</string>
    <string name="selectedParts">練習部位：</string>
    <string name="count">3</string>
    <string name="_3">3</string>
    <string name="count_3">3</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="accel">加速度データ</string>
    <string name="backtop">タイトルに戻る</string>
    <string name="part1">軸部の結果</string>
    <string name="moveParts">可動部の結果</string>
    <string name="えお">えお</string>
    <string name="histry">histry</string>

    <!--<string-array name="sort_spinner_item1">-->
    <!--<item name="key">５秒</item>-->
    <!--<item name="value">5000</item>-->
    <!--</string-array>-->
    <!--<string-array name="sort_spinner_item2">-->
    <!--<item name="key">10秒</item>-->
    <!--<item name="value">100000</item>-->
    <!--</string-array>-->
    <!--<string-array name="sort_spinner_item3">-->
    <!--<item name="key">15秒</item>-->
    <!--<item name="value">150000</item>-->
    <!--</string-array>-->

    <!--<array name="time_array">-->
    <!--<item>@array/sort_spinner_item1</item>-->
    <!--<item>@array/sort_spinner_item2</item>-->
    <!--<item>@array/sort_spinner_item3</item>-->
    <!--</array>-->

    <array name="time_array">
        <item>５秒</item>
        <item>５秒</item>
        <item>５秒</item>
    </array>
</resources>
