<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dosshi.isolationpracticeapplication.ResultActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="157dp"
        android:layout_height="156dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/dancer_img" />

    <Button
        android:id="@+id/practiceAdvice"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="13dp"
        android:text="@string/accel"
        app:layout_constraintBottom_toTopOf="@+id/titleback"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="加速度データ" />

    <Button
        android:id="@+id/titleback"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginBottom="33dp"
        android:layout_marginEnd="16dp"
        android:text="@string/backtop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="タイトルに戻る" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="お疲れ様でした！\nスマートフォンをベルトから取り出し、\nフィードバックを確認してください！"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="誤動作結果"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="時間"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/movetime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="可動部：なし"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/stoptime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="軸部　：なし"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="回数"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/movecount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="可動部：なし"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/stopcount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="軸部　：なし"
            android:textSize="24sp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
